--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: node_js
 node_js:
-- 6
+- 9
 before_script:
 - npm install grunt-cli -g
 - .github/patch-version.sh
-after_success:
-- if [ -e .github/deploy_key ]; then .github/deploy.sh; fi
-before_install:
-- openssl aes-256-cbc -K $encrypted_815954d41479_key -iv $encrypted_815954d41479_iv
-  -in .github/deploy_key.enc -out .github/deploy_key -d
+# Push site to gh-pages branch
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: .github/deploy.sh
+    on:
+      branch: master
