Use my own fork of jenkins-core-theme (fixes #4)

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "grunt-postcss": "^0.9.0",
     "grunt-replace": "^1.0.1",
     "imagemin-svgo": "^6.0.0",
-    "jenkins-core-theme": "^1.1.40",
+    "jenkins-core-theme": "TobiX/jenkins-core-theme",
     "load-grunt-tasks": "^3.3.0",
     "pixrem": "^4.0.1",
     "postcss-encode-base64-inlined-images": "0.0.2"
