Switch grunt-postcss to an updated fork

--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "@lodder/grunt-postcss": "^1.0.9",
     "autoprefixer": "^8.2.0",
     "cssnano": "^3.5.2",
     "grunt": "^1.0.2",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-imagemin": "^2.0.1",
     "grunt-contrib-less": "^2.0.0",
-    "grunt-postcss": "^0.9.0",
     "imagemin-svgo": "^6.0.0",
     "jenkins-core-theme": "TobiX/jenkins-core-theme",
     "load-grunt-tasks": "^5.1.0",
