--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "grunt-contrib-less": "^2.0.0",
     "imagemin-svgo": "^6.0.0",
     "jenkins-core-theme": "TobiX/jenkins-core-theme",
-    "load-grunt-tasks": "^5.1.0",
-    "postcss-encode-base64-inlined-images": "0.0.2"
+    "load-grunt-tasks": "^5.1.0"
   },
   "dependencies": {}
 }
