--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
   "license": "MIT",
   "devDependencies": {
     "@lodder/grunt-postcss": "^1.0.9",
-    "autoprefixer": "^8.2.0",
-    "cssnano": "^3.5.2",
+    "autoprefixer": "^9.6.1",
+    "cssnano": "^4.1.10",
     "grunt": "^1.0.2",
-    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-less": "^2.0.0",
     "jenkins-core-theme": "TobiX/jenkins-core-theme",
     "load-grunt-tasks": "^5.1.0"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
