--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,8 +1,15 @@
 name: Build CSS
 
 on:
-  - push
-  - pull_request
+  push:
+    branches:
+      - '*'
+    tags:
+      - 'v*'
+  pull_request:
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -27,3 +34,23 @@ jobs:
         with:
           name: dist
           path: dist
+
+      - name: Deploy main
+        uses: peaceiris/actions-gh-pages@v3
+        if: github.ref == 'refs/heads/main'
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist
+          destination_dir: dist
+
+      - name: Get tag name
+        id: tag
+        run: echo "::set-output name=TAG_NAME::${GITHUB_REF#refs/tags/}"
+
+      - name: Deploy tag
+        uses: peaceiris/actions-gh-pages@v3
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: dist
+          destination_dir: ${{ steps.tag.outputs.TAG_NAME }}
