--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@lodder/grunt-postcss": "^2.0.4",
-    "autoprefixer": "^9.8.6",
+    "@lodder/grunt-postcss": "^3.0.1",
+    "autoprefixer": "^10.3.1",
     "cssnano": "^4.1.11",
     "grunt": "^1.4.1",
     "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-less": "^2.0.0",
+    "grunt-contrib-less": "^3.0.0",
     "jenkins-core-theme": "TobiX/jenkins-core-theme",
-    "load-grunt-tasks": "^5.1.0"
+    "load-grunt-tasks": "^5.1.0",
+    "postcss": "^8.3.5"
   },
   "dependencies": {},
   "browserslist": [
